# fast-mac-gsplat

./: .gitignore  README.md  pyproject.toml  setup.py
agent_notes/: key_learnings.md
benchmarks/: benchmark_full_matrix.py  compare_v2_v3.py  full_rasterizer_benchmark_target_4k64k_v5.jsonl  full_rasterizer_benchmark_target_4k64k_v5.md  full_rasterizer_benchmark_target_4k64k_v7_forward.jsonl  full_rasterizer_benchmark_target_4k64k_v7_forward.md  full_rasterizer_benchmark_target_512_6k.jsonl  full_rasterizer_benchmark_target_512_6k.md  full_rasterizer_benchmark_target_512_6k_v7_forward.jsonl  full_rasterizer_benchmark_target_512_6k_v7_forward.md  full_rasterizer_benchmark_v6_refined_smoke.jsonl  full_rasterizer_benchmark_v6_refined_smoke.md  full_rasterizer_benchmark_v6_upgrade_deep.jsonl  full_rasterizer_benchmark_v6_upgrade_deep.md  full_rasterizer_benchmark_v6_upgrade_smoke.jsonl  full_rasterizer_benchmark_v6_upgrade_smoke.md  full_rasterizer_benchmark_v71_frontk_4k64k_probe.jsonl  full_rasterizer_benchmark_v71_frontk_4k64k_probe.md  full_rasterizer_benchmark_v71_frontk_4k64k_steady.jsonl  full_rasterizer_benchmark_v71_frontk_4k64k_steady.md  full_rasterizer_benchmark_v71_frontk_512_6k.jsonl  (+41 more)
csrc/: bindings.cpp
variants/v3/: ENGINEERING_NOTES.md  README.md  pyproject.toml  setup.py
variants/v3/benchmarks/: benchmark_mps.py
variants/v3/csrc/: bindings.cpp
variants/v3/csrc/metal/: gsplat_metal.mm  gsplat_v3_kernels.metal
variants/v3/csrc/shared/: common.h
variants/v3/tests/: reference_check.py
variants/v3/torch_gsplat_bridge_v3/: rasterize.py
(+175 files in other folders)
